* Remove fully justified text in paragraphs. This avoids large gaps between words when   there are long words on a line, and makes paragraphs easier to read.

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -200,7 +200,6 @@ background: #fff url('images/n2.gif') 0px 1px repeat-x;
 
 #main_inner p
 {
-text-align: justify;
 margin-bottom: 2.0em;
 }
 
